--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
-// Graphical variables
+// app/assets/stylesheets/application.scss
+
+// Configuration
 @import "config/fonts";
 @import "config/colors";
+@import "config/variables";
 @import "config/bootstrap_variables";
 
 // External libraries
