--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,10 +1,105 @@
-// Define variables for your color scheme
+// app/assets/stylesheets/config/_colors.scss
 
-// For example:
-$red: #FD1015;
-$blue: #0D6EFD;
-$yellow: #FFC65A;
-$orange: #E67E22;
-$green: #1EDD88;
-$gray: #0E0000;
-$light-gray: #F4F4F4;
+// === COULEURS PRINCIPALES MODEM ===
+
+// Orange (couleur principale)
+$modem-orange: #EF5327;
+$modem-orange-light: lighten($modem-orange, 10%); // #F27552
+$modem-orange-lighter: lighten($modem-orange, 20%); // #F59A7E
+$modem-orange-dark: darken($modem-orange, 10%); // #D33C12
+$modem-orange-darker: darken($modem-orange, 15%); // #B32F0D
+
+// Bleu (couleur secondaire)
+$modem-blue: #5F8CC7;
+$modem-blue-light: lighten($modem-blue, 10%); // #7FA4D6
+$modem-blue-lighter: lighten($modem-blue, 20%); // #A0BCE5
+$modem-blue-dark: darken($modem-blue, 10%); // #4674B0
+$modem-blue-darker: darken($modem-blue, 15%); // #3A609A
+
+// Vert (Démocrates pour la planète)
+$modem-green: #018837;
+$modem-green-light: lighten($modem-green, 10%); // #01A744
+$modem-green-dark: darken($modem-green, 10%); // #016228
+
+// Noir (texte principal)
+$modem-black: #292929;
+$modem-gray-dark: #3D3D3D;
+
+// === COULEURS NEUTRES ===
+
+// Gris
+$gray-100: #F8F9FA;
+$gray-200: #E9ECEF;
+$gray-300: #DEE2E6;
+$gray-400: #CED4DA;
+$gray-500: #ADB5BD;
+$gray-600: #6C757D;
+$gray-700: #495057;
+$gray-800: #343A40;
+$gray-900: #212529;
+
+// Blanc
+$white: #FFFFFF;
+$off-white: #FAFBFC;
+
+// === COULEURS SÉMANTIQUES (accessibilité) ===
+
+// Success
+$success: $modem-green;
+$success-light: lighten($success, 45%);
+$success-dark: darken($success, 10%);
+
+// Danger / Error
+$danger: #DC3545;
+$danger-light: lighten($danger, 40%);
+$danger-dark: darken($danger, 10%);
+
+// Warning
+$warning: #FFC107;
+$warning-light: lighten($warning, 30%);
+$warning-dark: darken($warning, 10%);
+
+// Info
+$info: $modem-blue;
+$info-light: lighten($info, 40%);
+$info-dark: darken($info, 10%);
+
+// === COULEURS D'INTERFACE ===
+
+// Backgrounds
+$body-bg: $white;
+$body-color: $modem-black;
+
+// Liens
+$link-color: $modem-blue;
+$link-hover-color: $modem-blue-dark;
+$link-decoration: none;
+$link-hover-decoration: underline;
+
+// Bordures
+$border-color: $gray-300;
+$border-radius: 0.375rem; // 6px
+$border-radius-sm: 0.25rem; // 4px
+$border-radius-lg: 0.5rem; // 8px
+$border-radius-xl: 1rem; // 16px
+
+// Ombres
+$box-shadow-sm: 0 0.125rem 0.25rem rgba($modem-black, 0.075);
+$box-shadow: 0 0.5rem 1rem rgba($modem-black, 0.1);
+$box-shadow-lg: 0 1rem 3rem rgba($modem-black, 0.175);
+
+// Focus (accessibilité WCAG)
+$focus-ring-width: 3px;
+$focus-ring-color: rgba($modem-blue, 0.5);
+$focus-ring-opacity: 0.5;
+
+// === COULEURS POUR GRAPHIQUES ===
+
+$chart-colors: (
+  'orange': $modem-orange,
+  'blue': $modem-blue,
+  'green': $modem-green,
+  'gray': $gray-600,
+  'yellow': #FFC107,
+  'purple': #6F42C1
+);
